# gnome-schedule

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.cvs  HACKING  MAINTAINERS  Makefile  Makefile.am  NEWS  README  README.cvs  README.md  TODO  TODO_BRANCH  autogen.sh  configure.ac  gnome-schedule.console  gnome-schedule.desktop  gnome-schedule.desktop.in  gnome-schedule.doap  gnome-schedule.spec  gnome-schedule.spec.in  system-config-schedule.console.in
desktop/: .cvsignore  Makefile.am  gnome-schedule.desktop.in  gnome-schedule.desktop.in.in
doc/: Makefile.am  addingandediting.html  index.html
help/: ChangeLog  Makefile.am  gnome-schedule.omf.in
help/C/: gnome-schedule.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: .cvsignore  es.po
help/fr/: fr.po
help/it/: it.po
help/oc/: oc.po
help/pl/: pl.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
icons/: Makefile.am
po/: .cvsignore  ChangeLog  Makefile  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gnome-schedule.gladestrings  gnome-schedule.pot  gu.po  hu.po  id.po  it.po  ja.po  lt.po  nb.po  ne.po  nl.po  nn.po  oc.po  pa.po  packtranslations.sh  pl.po  pt.po  pt_BR.po  ro.po  (+13 more)
servers/: .cvsignore  GNOME_GnomeSchedule.server.in  GNOME_GnomeSchedule.server.in.in  GNOME_schedule.server.in  GNOME_schedule.server.in.in  Makefile.am
src/: .cvsignore  Makefile.am  addWindow.py  addWindowHelp.py  applet.py  at.py  atEditor.py  atconf.py  config.py  config.py.in  cronconf.py  crontab.py  crontabEditor.py  crontabEditorHelper.py  data.py  editor.py  gnome-schedule-applet.xml  gnome-schedule-export  gnome-schedule-export.in  gnome-schedule-export.py  gnome-schedule-import  gnome-schedule-import.in  gnome-schedule-import.py  gnome-schedule.glade  gnome-schedule.in  gnome-schedule.py  gnome-schedule.xml  lang.py  mainWindow.py  preset.py  saveWindow.py  schedule.py  scheduleapplet.in  scheduleapplet.py  setuserWindow.py  support.py  template.py  template_chooser.py  template_manager.py  thoughicon.py  (+2 more)
src/examples/: dump.py  surerun  surerun.sh
