# Unsused atm
# gnomeschedule_manpagesdir = $(mandir)/man1
# gnomeschedule_manpages_DATA = gnome-schedule.1

gnomeschedule_htmldocdir = $(prefix)/share/doc/gnome-schedule-$(VERSION)

gnomeschedule_htmldoc_DATA = \
        index.html \
	addingandediting.html

EXTRA_DIST = $(gnomeschedule_htmldoc_DATA)
# Unused atm
# $(gnomeschedule_manpages_DATA)

