include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-schedule
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
	figures/gnome-schedule_advanced.png \
	figures/gnome-schedule_main.png \
	figures/gnome-schedule_new_task_once.png \
	figures/gnome-schedule_new_task.png \
	figures/gnome-schedule_new_task_recurrent.png

DOC_LINGUAS = es it
